--- a/conda.yml
+++ b/conda.yml
@@ -3,7 +3,9 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - mlflow=1.14.1
+  - mlflow=1.19.0
+  # - mlflow=1.14.1
+  - numpy=1.23.5
   - pyyaml=5.3.1
   - hydra-core=1.0.6
   - pip=20.3.3
