--- a/src/eda/conda.yml
+++ b/src/eda/conda.yml
@@ -3,11 +3,18 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - ipython==8.16.1
   - jupyterlab=3.0.12
   - seaborn=0.11.1
   - pandas=1.2.3
   - pip=20.3.3
-  - pandas-profiling=2.11.0
-  - pyarrow=2.0
+  - pandas-profiling=3.1.0
+  # - ipywidgets=7.6.3
+  - pydantic=1.8.2
   - pip:
-      - wandb==0.10.31
+      # - wandb==0.10.31
+      - wandb==0.12.17
+      - notebook==7.0.6
+      - matplotlib==3.4.3
+      - ipywidgets==8.1.1
+      - jinja2==3.1.1
