--- a/components/test_regression_model/conda.yml
+++ b/components/test_regression_model/conda.yml
@@ -3,10 +3,13 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - pandas=1.1.4
+  # - pandas=1.1.4
+  - pandas=1.2.3
   - pip=20.3.3
-  - mlflow=1.14.1
+  # - mlflow=1.14.1
+  - mlflow=1.19.0
   - scikit-learn=0.24.1
+  - numpy=1.23.5
   - pip:
       - wandb==0.10.31
       - git+https://github.com/udacity/nd0821-c2-build-model-workflow-starter.git#egg=wandb-utils&subdirectory=components
