--- a/src/train_random_forest/conda.yml
+++ b/src/train_random_forest/conda.yml
@@ -3,11 +3,12 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - pandas=1.1.4
+  - pandas=1.2.3
   - pip=20.3.3
-  - mlflow=1.14.1
+  - mlflow=1.19.0
   - scikit-learn=0.24.1
-  - matplotlib=3.2.2
+  - matplotlib=3.4.3
   - pillow=8.1.2
+  - numpy=1.23.5
   - pip:
-      - wandb==0.10.21
+      - wandb==0.10.31
